--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="search_hint">Enter GitHub Username</string>
     <string name="empty_search_error_text">Please enter GitHub username to search</string>
     <string name="ok">Ok</string>
+    <string name="repositories">Repositories</string>
 </resources>
